rollout/webapp.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: webapp
spec:
  selector:
    matchLabels:
      app: webapp
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: webapp
        version: original
    spec:
      containers:
      - name: webapp
        image: richardchesterwood/istio-fleetman-webapp-angular:6-experimental
        imagePullPolicy: Always
  strategy:
    canary:
      trafficRouting:
        istio:
          virtualService: 
            name: fleetman-webapp
            routes:
            - primary
            - secondary
          destinationRule:
            name: fleetman-webapp
            canarySubsetName: canary
            stableSubsetName: stable
      steps:
      - setWeight: 20
      - pause: {}
...
---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-webapp
spec:
  selector:
    app: webapp
  ports:
    - name: http
      port: 80
  type: ClusterIP
...
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-webapp
  namespace: default
spec:
  hosts:
    - "fleetman.com"
  gateways:
    - fleetman-ingress-gateway-configuration
  http:
    - name: primary
      match:
        - uri:
            prefix: v2
      route:
        - destination:
            host: fleetman-webapp
            subset: canary
    - name: secondary
      route:
        - destination:
            host: fleetman-webapp
            subset: stable
...
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: gpsingh-webapp
  namespace: default
spec:
  hosts:      # which incoming host are we applying the proxy rules to???
    - "gpsingh.com" # Copy the value in the gateway hosts - usually a Domain Name
  gateways:
    - fleetman-ingress-gateway-configuration
  http:
    - route:
        - destination:
            host: fleetman-webapp
            subset: stable
...
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-webapp
  namespace: default
spec:
  host: fleetman-webapp
  subsets:
    - labels:
        app: webapp
      name: stable
    - labels:
        app: webapp
      name: canary
